--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chat">
         <activity
-            android:name=".SearchActivity"
+            android:name=".PersonFragment"
+            android:exported="false" />
+        <activity
+            android:name=".SearchFragment"
             android:exported="false" />
         <activity
             android:name=".SignUpActivity"
@@ -22,7 +25,7 @@
             android:name=".PickActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".LoginFragment"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
